src/objects/Apttus_Config2__Milestone2__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__ActualDate__c</fullName>
        <description>The milestone completed date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The milestone completed date</inlineHelpText>
        <label>Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Comments__c</fullName>
        <description>The milestone comments</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The milestone comments</inlineHelpText>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CompletedOnDate__c</fullName>
        <description>The date the milestone was completed</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date the milestone was completed</inlineHelpText>
        <label>Completed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ContextEntityId__c</fullName>
        <description>The ID of the context entity</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>The ID of the context entity</inlineHelpText>
        <label>Context Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ContextEntityType__c</fullName>
        <description>The context entity type</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The context entity type</inlineHelpText>
        <label>Context Entity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The milestone description</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The milestone description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExpectedDate__c</fullName>
        <description>The milestone expected date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The milestone expected date</inlineHelpText>
        <label>Expected Date</label>
        <type>Date</type>
    </fields>
</CustomObject>